Add user and role entities Create appropriate routes Allow OPTIONS method for swagger documentation Fix bugs
