# app/Db/Proxies/__CG__BookmarkerDbEntitiesUser.php
@@ -5,7 +5,7 @@ namespace DoctrineProxies\__CG__\Bookmarker\Db\Entities;
 /**
  * DO NOT EDIT THIS FILE - IT WAS CREATED BY DOCTRINE'S PROXY GENERATOR
  */
-class Book extends \Bookmarker\Db\Entities\Book implements \Doctrine\ORM\Proxy\Proxy
+class User extends \Bookmarker\Db\Entities\User implements \Doctrine\ORM\Proxy\Proxy
 {
     /**
      * @var \Closure the callback responsible for loading properties in the proxy object. This callback is called with
@@ -64,10 +64,10 @@ class Book extends \Bookmarker\Db\Entities\Book implements \Doctrine\ORM\Proxy\P
     public function __sleep()
     {
         if ($this->__isInitialized__) {
-            return ['__isInitialized__', '' . "\0" . 'Bookmarker\\Db\\Entities\\Book' . "\0" . 'id', '' . "\0" . 'Bookmarker\\Db\\Entities\\Book' . "\0" . 'ext', '' . "\0" . 'Bookmarker\\Db\\Entities\\Book' . "\0" . 'filePath', '' . "\0" . 'Bookmarker\\Db\\Entities\\Book' . "\0" . 'title', '' . "\0" . 'Bookmarker\\Db\\Entities\\Book' . "\0" . 'year', '' . "\0" . 'Bookmarker\\Db\\Entities\\Book' . "\0" . 'lang', '' . "\0" . 'Bookmarker\\Db\\Entities\\Book' . "\0" . 'authors', '' . "\0" . 'Bookmarker\\Db\\Entities\\Book' . "\0" . 'genre', '' . "\0" . 'Bookmarker\\Db\\Entities\\Book' . "\0" . 'mime', '' . "\0" . 'Bookmarker\\Db\\Entities\\Book' . "\0" . 'user'];
+            return ['__isInitialized__', '' . "\0" . 'Bookmarker\\Db\\Entities\\User' . "\0" . 'id', '' . "\0" . 'Bookmarker\\Db\\Entities\\User' . "\0" . 'password', '' . "\0" . 'Bookmarker\\Db\\Entities\\User' . "\0" . 'name', '' . "\0" . 'Bookmarker\\Db\\Entities\\User' . "\0" . 'surname', '' . "\0" . 'Bookmarker\\Db\\Entities\\User' . "\0" . 'email', '' . "\0" . 'Bookmarker\\Db\\Entities\\User' . "\0" . 'role', '' . "\0" . 'Bookmarker\\Db\\Entities\\User' . "\0" . 'books'];
         }
 
-        return ['__isInitialized__', '' . "\0" . 'Bookmarker\\Db\\Entities\\Book' . "\0" . 'id', '' . "\0" . 'Bookmarker\\Db\\Entities\\Book' . "\0" . 'ext', '' . "\0" . 'Bookmarker\\Db\\Entities\\Book' . "\0" . 'filePath', '' . "\0" . 'Bookmarker\\Db\\Entities\\Book' . "\0" . 'title', '' . "\0" . 'Bookmarker\\Db\\Entities\\Book' . "\0" . 'year', '' . "\0" . 'Bookmarker\\Db\\Entities\\Book' . "\0" . 'lang', '' . "\0" . 'Bookmarker\\Db\\Entities\\Book' . "\0" . 'authors', '' . "\0" . 'Bookmarker\\Db\\Entities\\Book' . "\0" . 'genre', '' . "\0" . 'Bookmarker\\Db\\Entities\\Book' . "\0" . 'mime', '' . "\0" . 'Bookmarker\\Db\\Entities\\Book' . "\0" . 'user'];
+        return ['__isInitialized__', '' . "\0" . 'Bookmarker\\Db\\Entities\\User' . "\0" . 'id', '' . "\0" . 'Bookmarker\\Db\\Entities\\User' . "\0" . 'password', '' . "\0" . 'Bookmarker\\Db\\Entities\\User' . "\0" . 'name', '' . "\0" . 'Bookmarker\\Db\\Entities\\User' . "\0" . 'surname', '' . "\0" . 'Bookmarker\\Db\\Entities\\User' . "\0" . 'email', '' . "\0" . 'Bookmarker\\Db\\Entities\\User' . "\0" . 'role', '' . "\0" . 'Bookmarker\\Db\\Entities\\User' . "\0" . 'books'];
     }
 
     /**
@@ -76,7 +76,7 @@ class Book extends \Bookmarker\Db\Entities\Book implements \Doctrine\ORM\Proxy\P
     public function __wakeup()
     {
         if ( ! $this->__isInitialized__) {
-            $this->__initializer__ = function (Book $proxy) {
+            $this->__initializer__ = function (User $proxy) {
                 $proxy->__setInitializer(null);
                 $proxy->__setCloner(null);
 
@@ -191,221 +191,155 @@ class Book extends \Bookmarker\Db\Entities\Book implements \Doctrine\ORM\Proxy\P
     /**
      * {@inheritDoc}
      */
-    public function setExt($ext)
+    public function setLogin($login)
     {
 
-        $this->__initializer__ && $this->__initializer__->__invoke($this, 'setExt', [$ext]);
+        $this->__initializer__ && $this->__initializer__->__invoke($this, 'setLogin', [$login]);
 
-        return parent::setExt($ext);
+        return parent::setLogin($login);
     }
 
     /**
      * {@inheritDoc}
      */
-    public function getExt()
+    public function getLogin()
     {
 
-        $this->__initializer__ && $this->__initializer__->__invoke($this, 'getExt', []);
+        $this->__initializer__ && $this->__initializer__->__invoke($this, 'getLogin', []);
 
-        return parent::getExt();
+        return parent::getLogin();
     }
 
     /**
      * {@inheritDoc}
      */
-    public function setFilePath($filePath)
+    public function setPassword($password)
     {
 
-        $this->__initializer__ && $this->__initializer__->__invoke($this, 'setFilePath', [$filePath]);
+        $this->__initializer__ && $this->__initializer__->__invoke($this, 'setPassword', [$password]);
 
-        return parent::setFilePath($filePath);
+        return parent::setPassword($password);
     }
 
     /**
      * {@inheritDoc}
      */
-    public function getFilePath()
+    public function getPassword()
     {
 
-        $this->__initializer__ && $this->__initializer__->__invoke($this, 'getFilePath', []);
+        $this->__initializer__ && $this->__initializer__->__invoke($this, 'getPassword', []);
 
-        return parent::getFilePath();
+        return parent::getPassword();
     }
 
     /**
      * {@inheritDoc}
      */
-    public function setTitle($title)
+    public function setName($name)
     {
 
-        $this->__initializer__ && $this->__initializer__->__invoke($this, 'setTitle', [$title]);
+        $this->__initializer__ && $this->__initializer__->__invoke($this, 'setName', [$name]);
 
-        return parent::setTitle($title);
+        return parent::setName($name);
     }
 
     /**
      * {@inheritDoc}
      */
-    public function getTitle()
+    public function getName()
     {
 
-        $this->__initializer__ && $this->__initializer__->__invoke($this, 'getTitle', []);
+        $this->__initializer__ && $this->__initializer__->__invoke($this, 'getName', []);
 
-        return parent::getTitle();
+        return parent::getName();
     }
 
     /**
      * {@inheritDoc}
      */
-    public function setYear($year)
+    public function setSurname($surname)
     {
 
-        $this->__initializer__ && $this->__initializer__->__invoke($this, 'setYear', [$year]);
+        $this->__initializer__ && $this->__initializer__->__invoke($this, 'setSurname', [$surname]);
 
-        return parent::setYear($year);
+        return parent::setSurname($surname);
     }
 
     /**
      * {@inheritDoc}
      */
-    public function getYear()
+    public function getSurname()
     {
 
-        $this->__initializer__ && $this->__initializer__->__invoke($this, 'getYear', []);
+        $this->__initializer__ && $this->__initializer__->__invoke($this, 'getSurname', []);
 
-        return parent::getYear();
+        return parent::getSurname();
     }
 
     /**
      * {@inheritDoc}
      */
-    public function setLang($lang)
+    public function setEmail($email)
     {
 
-        $this->__initializer__ && $this->__initializer__->__invoke($this, 'setLang', [$lang]);
+        $this->__initializer__ && $this->__initializer__->__invoke($this, 'setEmail', [$email]);
 
-        return parent::setLang($lang);
+        return parent::setEmail($email);
     }
 
     /**
      * {@inheritDoc}
      */
-    public function getLang()
+    public function getEmail()
     {
 
-        $this->__initializer__ && $this->__initializer__->__invoke($this, 'getLang', []);
+        $this->__initializer__ && $this->__initializer__->__invoke($this, 'getEmail', []);
 
-        return parent::getLang();
+        return parent::getEmail();
     }
 
     /**
      * {@inheritDoc}
      */
-    public function addAuthor(\Bookmarker\Db\Entities\Author $author)
+    public function setRole(\Bookmarker\Db\Entities\Role $role = NULL)
     {
 
-        $this->__initializer__ && $this->__initializer__->__invoke($this, 'addAuthor', [$author]);
+        $this->__initializer__ && $this->__initializer__->__invoke($this, 'setRole', [$role]);
 
-        return parent::addAuthor($author);
+        return parent::setRole($role);
     }
 
     /**
      * {@inheritDoc}
      */
-    public function removeAuthor(\Bookmarker\Db\Entities\Author $author)
+    public function getRole()
     {
 
-        $this->__initializer__ && $this->__initializer__->__invoke($this, 'removeAuthor', [$author]);
+        $this->__initializer__ && $this->__initializer__->__invoke($this, 'getRole', []);
 
-        return parent::removeAuthor($author);
+        return parent::getRole();
     }
 
     /**
      * {@inheritDoc}
      */
-    public function getAuthors()
+    public function addBook(\Bookmarker\Db\Entities\Book $book)
     {
 
-        $this->__initializer__ && $this->__initializer__->__invoke($this, 'getAuthors', []);
+        $this->__initializer__ && $this->__initializer__->__invoke($this, 'addBook', [$book]);
 
-        return parent::getAuthors();
+        return parent::addBook($book);
     }
 
     /**
      * {@inheritDoc}
      */
-    public function setGenre(\Bookmarker\Db\Entities\Genre $genre = NULL)
+    public function removeBook(\Bookmarker\Db\Entities\Book $book)
     {
 
-        $this->__initializer__ && $this->__initializer__->__invoke($this, 'setGenre', [$genre]);
+        $this->__initializer__ && $this->__initializer__->__invoke($this, 'removeBook', [$book]);
 
-        return parent::setGenre($genre);
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    public function getGenre()
-    {
-
-        $this->__initializer__ && $this->__initializer__->__invoke($this, 'getGenre', []);
-
-        return parent::getGenre();
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    public function getMime()
-    {
-
-        $this->__initializer__ && $this->__initializer__->__invoke($this, 'getMime', []);
-
-        return parent::getMime();
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    public function setMime($mime)
-    {
-
-        $this->__initializer__ && $this->__initializer__->__invoke($this, 'setMime', [$mime]);
-
-        return parent::setMime($mime);
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    public function getDownloadLink()
-    {
-
-        $this->__initializer__ && $this->__initializer__->__invoke($this, 'getDownloadLink', []);
-
-        return parent::getDownloadLink();
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    public function setUser(\Bookmarker\Db\Entities\User $user = NULL)
-    {
-
-        $this->__initializer__ && $this->__initializer__->__invoke($this, 'setUser', [$user]);
-
-        return parent::setUser($user);
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    public function getUser()
-    {
-
-        $this->__initializer__ && $this->__initializer__->__invoke($this, 'getUser', []);
-
-        return parent::getUser();
+        return parent::removeBook($book);
     }
 
 }
